--- a/beadando9/app/src/main/AndroidManifest.xml
+++ b/beadando9/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity">
+        tools:ignore="GoogleAppIndexingWarning"
+       >
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
